Fixed the preview height and the overflow in the list views

--- a/webapp/packages/studio-app/src/components/project-resource/project-list/project-list-view.css
+++ b/webapp/packages/studio-app/src/components/project-resource/project-list/project-list-view.css
@@ -33,6 +33,5 @@
   width: 100%;
   flex-grow: 1;
   max-width: 100%;
-  /*margin: 5px;*/
-  /*border: 1px dashed salmon;*/
+  padding: 10px;
 }
